# SolisMC-FileIO

./: .gitignore  CMakeLists.txt
cmake/: nbtConfig.cmake
include/format/minecraft/nbt/format/: errors.hpp  tags.hpp
include/io/minecraft/nbt/io/: parser_array.hpp  parser_compound.hpp
include/minecraft/nbt/: tags.hpp  types.hpp
include/minecraft/nbt/format/: errors.hpp  tags.hpp  types.hpp
include/minecraft/nbt/io/: nbt_reader.hpp  parser.hpp  parser_array.hpp  parser_interface.hpp  parser_primitives.hpp
include/tests/minecraft/nbt/tests/: tests.hpp
nbt/: cmake_nbt.cmake
nbt/data/: gen_data.py
nbt/data/_data_gen/: __init__.py  _converter.py  _reader.py  ctypes.py  type_mapping.py
nbt/data/_data_gen/_types/: __init__.py  ctypes.py  mapping.py  register.py  stream.py
nbt/data/models/: 0_int.yml  0_long.yml  0_short.yml  1_double.yml  1_float.yml  1_string.yml  2_int_array.yml
nbt/include/minecraft/nbt/: parser.hpp  types.hpp
nbt/include/minecraft/nbt/parser/: base.hpp  float.hpp  integral.hpp
nbt/include/minecraft/nbt/parsers/: base.hpp  float.hpp  integral.hpp  list.hpp  string.hpp
nbt/include/minecraft/nbt/types/: base.hpp  float.hpp  integral.hpp
nbt/src/: types.cpp
nbt/src/parser/: numbers.cpp  parsers.cpp
nbt/src/parsers/: float.cpp  integral.cpp  lists.cpp  string.cpp
nbt/src/types/: types.cpp
nbt/tests/: parse_integral.cpp
nbt/tests/parser/: double.cpp  float.cpp  int.cpp  int_list.cpp  long.cpp  short.cpp  string.cpp
nbt/tests/resources/: integrals.hpp
nbt/tests/resources/solismc/tests/nbt/: common.hpp  float.hpp  integrals.hpp  list.hpp  string.hpp
src/nbt/: nbt.cpp  nbt_reader.cpp
src/nbt/format/: parsing.cpp  tags.cpp
src/nbt/io/: parsing.cpp
test/parsing/: bytearray.cpp  bytes.cpp  int.cpp  intarray.cpp  long.cpp  longarray.cpp  short.cpp  string.cpp
